kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-openlayers
spec:
  ports:
    - name: svc-port
      port: 8080
      targetPort: 8080
  type: ClusterIP
